--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ form {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     flex: 1;
     margin-right: 20px;
+    
 }
 
 label {
@@ -87,4 +88,7 @@ button:hover {
 
 .idea button {
     margin-left: 10px;
+}
+.hidden {
+    display: none;
 }
