--- a/styles.css
+++ b/styles.css
@@ -2,29 +2,30 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #f4f4f4;
+    background-color: rgba(0, 0, 0, 0.8); /* Couleur de fond avec opacité */
+    background-image: url('img/correctioncachebosstrap.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
+
 
 h1, h2 {
     text-align: center;
+    color: white;
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
 }
 
 form {
-    max-width: 600px;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    flex: 1;
-    margin-right: 20px;
-    
+    margin-bottom: 20px;
 }
 
 label {
@@ -41,7 +42,7 @@ input, select, textarea {
 }
 
 button {
-    width: 30%;
+    width: 10%;
     padding: 10px;
     background-color: #28a5a7;
     color: #fff;
@@ -59,36 +60,47 @@ button:hover {
     margin-bottom: 10px;
 }
 
-#messages .erreur{
+#messages .erreur {
     color: red;
     margin-bottom: 10px;
 }
 
-#success {
-    color: green;
-}
-
-#listeIdee {
-    max-width: 600px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    flex: 1;
+.idea-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .idea {
-    border-bottom: 1px solid #ccc;
-    padding: 10px 0;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
-.idea:last-child {
-    border-bottom: none;
+.idea h3 {
+    margin-top: 0;
+}
+
+.idea p {
+    margin: 5px 0;
 }
 
 .idea button {
-    margin-left: 10px;
+    margin-top: 10px;
+    width: auto;
+    padding: 5px 10px;
+    background-color: #28a5a7;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
 }
-.hidden {
-    display: none;
+
+.idea button:hover {
+    background-color: #0c5e5f;
 }
