--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@ body {
 h1, h2 {
     text-align: center;
     color: white;
+    width: 20%;
+    height: 80px;
+    background-color: #0c5e5f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-right-radius: 5rem;
 }
 
 .container {
