--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,24 @@ h1, h2 {
 }
 
 .container {
-    max-width: 1200px;
+    width: 100%;
+    height: 500px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+  
 }
-
+.form-container{
+    width: 50%;
+    height: 300px;
+    
+}
+.image-container img{
+    width: 100%;
+    height: 310px;
+    margin-left: 3rem;
+}
 form {
     padding: 20px;
     background-color: #fff;
